<resources>
    <string name="app_name">Moda Sin Complejos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="imagenlugar">imagen</string>
    <string name="imagen">imagen</string>
    <string name="texto_incicio">Nuestra aplicación está destinada a mujeres que deseen encontrar ropa de moda en todos los talles en locales del centro de Córdoba Capital. La misma tiene como objetivo la integración a la mujer real en contraposición de una sociedad que estigmatiza, ya que la vestimenta es una necesidad primaria que buscamos resolver.</string>
    <string name="titulo_tip1">1. Realza lo que te gusta</string>
    <string name="cuerpo_tip1">Cada mujer ama una parte de su cuerpo por encima de otras. A menudo, las mujeres con generosas curvas también presentan un pecho más grande y les encanta mostrarlo. Otras mujeres prefieren hacer hincapié en sus caderas.</string>
    <string name="titulo_tip2">2. Saber lo que no te gusta</string>
    <string name="cuerpo_tip2">También es importante saber exactamente lo que no te sienta bien o lo que no te gusta de tu cuerpo. Solo de esta manera se puede seleccionar el tipo de ropa que es mejor para ti. Puede ser que no te gusten tus piernas o tus brazos: con un largo estratégico y una manga tres cuartos ya puedes disimular esa parte que no te gusta de tu cuerpo y lucir estupenda.</string>
    <string name="titulo_tip3">3. Elige cuidadosamente la tela</string>
    <string name="cuerpo_tip3">Evita los tejidos particularmente brillantes. Te sugerimos que elijas una blusa mate en lugar de una de seda, ya que tiende a recoger mucho la luz y nos da más volumen. Elige prendas de crepé, algodón e incluso lana ligera.</string>
    <string name="titulo_tip4">4. Deja volar tu imaginación</string>
    <string name="cuerpo_tip4">Una manera de ser más conscientes de nosotros mismos y nuestros cuerpos, es dejar volar tu imaginación de manera libre cuando te encuentres sola en casa. Hay que darle valor y apostar por lo que realmente te gusta, aunque en principio no lo harías.</string>
    <string name="titulo_tip5">5. Experimenta</string>
    <string name="cuerpo_tip5">No tengas miedo a experimentar con tus looks. Cuando vayas a comprar ropa no te cierres a nada y prueba diferentes estilos, estampados y mezclas. Elige marcas de ropa a las que nunca te habías atrevido, a lo mejor te llevas una sorpresa muy grata. Busca las tendencias de la temporada e intenta aplicarlas a tus outfits, hay un montón de opciones por descubrir. </string>
    <string name="titulo_info">INADI:</string>
    <string name="cuerpo1_info">Asistencia gratuita las 24 horas: 0800 999 2345</string>
    <string name="cuerpo2_info">Avenida General Paz 94, Primer Piso - Córdoba</string>
    <string name="cuerpo3_info">Teléfono: (0351) 426-4695</string>
    <string name="cuerpo4_info">Horario de atención: lunes a viernes de 8 a 16 horas</string>
    <string name="cuerpo5_info">Email: cordoba@inadi.gob.ar</string>
    <string name="cuerpo6_info">Las acciones del INADI (Instituto Nacional contra la Discriminación, la Xenofobia y el Racismo) están dirigidas a todas aquellas personas cuyos derechos se ven afectados al ser discriminadas por su origen étnico o su nacionalidad, por sus opiniones políticas o sus creencias religiosas, por su género o identidad sexual, por tener alguna discapacidad o enfermedad, por su edad o por su aspecto físico. Sus funciones se orientan a garantizar para esas personas los mismos derechos y garantías de los que goza el conjunto de la sociedad, es decir, un trato igualitario. El objetivo es brindar un servicio de asesoramiento integral y gratuito a personas o grupos en situación de discriminación o víctimas de xenofobia o racismo, proporcionando patrocinio gratuito a pedido de la parte interesada. Diseñar e impulsar campañas educativas y comunicacionales tendientes a la valorización del pluralismo social y cultural, y a la eliminación de actitudes discriminatorias, xenófobas o racistas. Informar a la opinión pública sobre actitudes y conductas discriminatorias, xenófobas o racistas que pudieran manifestarse en cualquier ámbito de la vida nacional, especialmente en las áreas de educación, salud, acción social y empleo; provengan ellas de autoridades, entidades o personas privadas.</string>
    <string name="titulo2_info">Informe Naciones Unidas de los Derechos Humanos:</string>
    <string name="subtitulo_info">Lucha contra la discriminación de la mujer</string>
    <string name="cuerpo7_info">La igualdad de género es fundamental para la realización de los derechos humanos de todas las personas. Sin embargo, las leyes discriminatorias contra las mujeres aún persisten en todos los rincones del mundo y se continúan promulgando nuevas leyes de este tipo. En todas las tradiciones jurídicas existen muchas leyes que continúan institucionalizando la condición de segunda clase para las mujeres y las niñas respecto a la nacionalidad y ciudadanía, la salud, la educación, los derechos maritales, los derechos laborales, la patria potestad y los derechos a la propiedad y a la herencia. Estas formas de discriminación contra la mujer menoscaban el empoderamiento de la mujer.
En algunos países, las mujeres, a diferencia de los hombres, no pueden vestirse a su gusto, ni pueden conducir un vehículo, ni trabajar de noche, ni heredar bienes o atestiguar en los tribunales. La amplia mayoría de leyes que son expresamente discriminatorias y que están vigentes están relacionadas con la vida familiar, y algunas limitan el derecho de la mujer a contraer matrimonio (o el derecho a no contraer matrimonio en caso de matrimonios prematuros forzados), así como el derecho a divorciarse y volverse a casar, lo cual propicia las prácticas maritales discriminatorias, como la obediencia de la mujer y la poligamia. Las leyes que estipulan de manera explícita la “obediencia de la mujer” todavía gobiernan las relaciones maritales en muchos Estados.</string>
</resources>
