<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">


    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/map"
                        tools:context="com.example.fede.pruebainterfazgrafica.MapsActivity"
                        android:name="com.google.android.gms.maps.SupportMapFragment" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">


                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/scrollView" >

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:id="@+id/imageView"
                                android:layout_gravity="center_horizontal"
                                android:background="@drawable/foto_central" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/texto_incicio"
                                android:id="@+id/textView"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.63" />
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/scrollView3" >

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/titulo_info"
                                android:id="@+id/textView12" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo1_info"
                                android:id="@+id/textView13" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo2_info"
                                android:id="@+id/textView14" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo3_info"
                                android:id="@+id/textView15" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo4_info"
                                android:id="@+id/textView16" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo5_info"
                                android:id="@+id/textView17" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo6_info"
                                android:id="@+id/textView18"
                                android:layout_marginTop="40dp"
                                android:textColor="#000000" />

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:id="@+id/imageView4"
                                android:background="@drawable/info"
                                android:layout_marginTop="20dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/titulo2_info"
                                android:id="@+id/textView19"
                                android:layout_marginTop="10dp"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/subtitulo_info"
                                android:id="@+id/textView20"
                                android:textColor="#e493d4"
                                android:layout_marginTop="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo7_info"
                                android:id="@+id/textView21"
                                android:textColor="#e493d4"
                                android:layout_marginTop="10dp" />

                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/scrollView2" >

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/titulo_tip1"
                                android:textColor="#e493d4"
                                android:id="@+id/textView2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo_tip1"
                                android:id="@+id/textView3" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/titulo_tip2"
                                android:textColor="#e493d4"
                                android:id="@+id/textView4" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo_tip2"
                                android:id="@+id/textView5" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/titulo_tip3"
                                android:textColor="#e493d4"
                                android:id="@+id/textView6" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo_tip3"
                                android:id="@+id/textView7" />

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="240dp"
                                android:id="@+id/imageView2"
                                android:background="@drawable/foto_tips1"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/titulo_tip4"
                                android:textColor="#e493d4"
                                android:id="@+id/textView8" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo_tip4"
                                android:id="@+id/textView9" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/titulo_tip5"
                                android:textColor="#e493d4"
                                android:id="@+id/textView10" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/cuerpo_tip5"
                                android:id="@+id/textView11" />

                            <ImageView
                                android:layout_width="200dp"
                                android:layout_height="250dp"
                                android:id="@+id/imageView3"
                                android:background="@drawable/foto_tips2"
                                android:layout_gravity="center_horizontal" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">



    </android.support.design.widget.AppBarLayout>

</RelativeLayout>

